--- a/styles/style.css
+++ b/styles/style.css
@@ -203,6 +203,10 @@ body {
     width: 100%;
   }
 
+  .header {
+    margin-top: 5%;
+  }
+
   .header,
   .container__presentation__content,
   .container__presentation__caption,
@@ -211,10 +215,23 @@ body {
     font-size: 1rem;
   }
 
+  .container__presentation__buttons__links img {
+    width: 2rem;
+    padding: 0.3rem;
+    border-radius: 30%;
+  }
+
+  .container__presentation__buttons__links__navegation {
+    padding: 0.5rem 0;
+  }
+
   .container__img {
     display: flex;
     justify-content: center;
     object-fit: fill;
     width: auto;
+  }
+  .footer{
+    padding: 5%;
   }
 }
